--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,22 @@
-- name: Install Terraform
-  uses: hashicorp/terraform-github-actions@v1
-  with:
-    tf_version: 0.15.0
-- name: Set up GCP credentials
-  uses: google-auth/setup-gcloud@v2
-  with:
-    service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-- name: Apply Terraform
-  uses: hashicorp/terraform-github-actions@v1
-  with:
-    tf_action: apply
-    tf_dir: ../../main.tf
+name: Terraform
+
+on: [push]
+
+jobs:
+  terraform:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 0.14.4
+    - name: Configure GCP credentials
+      uses: google-actions/configure-gcloud@v2
+      with:
+        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+        project_id: my-gcp-project
+    - name: Plan
+      run: terraform plan
+    - name: Apply
+      run: terraform apply -auto-approve
